@@ -347,7 +347,7 @@ if (empty($snatched)) {
 }
 $peer_deleted = false;
 if ($event === 'stopped') {
-    $peer_deleted = $peer_stuffs->delete($this_user_torrent['id'], $torrent['id'], $info_hash);
+    $peer_deleted = $peer_stuffs->delete_by_id($this_user_torrent['id'], $torrent['id'], $info_hash);
     $cache->delete('peers_' . $userid);
 }
 if (isset($self) && $event === 'stopped') {
